<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="za.co.eduassistgo.eduassisthealth.Home"
    >
    <include layout = "@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="#FAF9F8"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="none">
            <Button
                android:id="@id/health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:background="@drawable/mybutton"
                android:onClick="loadPage"
            />
            <Button
                android:id="@id/wellbeing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wellbeing"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
            />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parents"
                android:id="@id/parents"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenges"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/healthcare"
                android:id="@id/healthcare"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mental_illness"
                android:id="@id/mental_illness"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consent"
                android:id="@id/consent"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexual_violence"
                android:id="@id/sexual_violence"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:id="@id/help"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:onClick="loadPage"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency"
                android:id="@id/emergency"
                android:background="@drawable/mybutton"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="55dp"
                android:onClick="loadPage"
                />
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9189472653918970/7167825305">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
